--- a/example8.html
+++ b/example8.html
@@ -8,11 +8,12 @@ background-color:lightblue;
 padding:10px;
 margin-bottom: 10px;
 </style>
-<title>Display Block</title>
+<title>Devote lord shiva</title>
 </head>
 <body>
 <img src="C:\Users\vijay\OneDrive\Desktop\lord shiva.webp"
 </body>
 </html>
+
 
 
